tests/language_modules/04_types/invalid_semantics/duplicate_type.vf
module DuplicateType

type Money is Integer
type Money is Double

end DuplicateType